feat: auto rankup, placeholder, corrections